tab spacing fix

--- a/app/modules/new-dashboard/components/tab-header-with-status/style.css
+++ b/app/modules/new-dashboard/components/tab-header-with-status/style.css
@@ -9,7 +9,7 @@
     height: 14px;
     left: 24px;
     top: 12px; */
-    padding: 12px 15px;    
+    padding: 12px 24px;    
 
     font-family: Adobe Garamond Pro;
     font-style: normal;
